2010-01-04  Elad <el.il@doom.co.il>

	* po/he.po: New translation to Hebrew.
	* po/LINGUAS: Add Hebrew to the list.

2009-12-16  Thorsten Kukuk  <kukuk@suse.de>

	* release version 1.1.1
	
	* NEWS: Adjust for 1.1.1
	* configure.in: Likewise.
	* doc/adg/Linux-PAM_ADG.xml: Likewise.
	* doc/mwg/Linux-PAM_MWG.xml: Likewise.
	* doc/sag/Linux-PAM_SAG.xml: Likewise.
	* po/*.po: Regenerated.

2009-12-08  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Rename DEBUG to PAM_DEBUG.
	* libpam/pam_env.c: Likewise
	* libpam/pam_handlers.c: Likewise
	* libpam/pam_miscc.c: Likewise
	* libpam/pam_password.c: Likewise
	* libpam/include/security/_pam_macros.h: Likewise
	* libpamc/test/modules/pam_secret.c: Likewise
	* modules/pam_group/pam_group.c: Likewise
	* modules/pam_listfile/pam_listfile.c: Likewise
	* modules/pam_unix/pam_unix_auth.c: Likewise
	* modules/pam_unix/pam_unix_passwd.c: Likewise

2009-12-08  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/passverify.c(unix_update_shadow): Create a shadow
	entry if not present in the file.

	* modules/pam_listfile/pam_listfile.c(pam_sm_authenticate): Remove
	unused function and variable.

2009-11-19  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_sepermit/pam_sepermit.c(sepermit_match): Return
	PAM_AUTH_ERR from the module if sepermit_lock() fails.

2009-11-18  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_access/pam_access.c(user_match): Revert the netgroup
	match to the original behavior, add new syntax for adding the local
	hostname.
	* modules/pam_access/access.conf.5.xml: Document the new syntax
	for adding the local hostname to the netgroup match.

2009-11-10  Thorsten Kukuk  <kukuk@suse.de>

	* doc/man/pam_get_authtok.3.xml: Document pam_get_authtok_noverify
	and pam_get_authtok_verify.

	* libpam/Makefile.am (libpam_la_LDFLAGS): Bump revesion of libpam.

	* libpam/pam_get_authtok.c (pam_get_authtok_internal): Renamed
	from pam_get_authtok, add flags argument, always check return
	values.
