@@ -1,3 +1,8 @@
+2010-02-09  Tomas Mraz  <t8m@centrum.cz>
+
+	* libpam/pam_get_authtok.c (pam_get_authtok_internal): Fix
+	regression in the new password prompt.
+
 2010-01-04  Elad <el.il@doom.co.il>
 
 	* po/he.po: New translation to Hebrew.
